--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -1,8 +1,4 @@
+primaryBranch: monorepo_main
 releaseType: java-yoshi
 manifest: true
 handleGHRelease: true
-branches:
-  - releaseType: java-yoshi
-    handleGHRelease: true
-    bumpMinorPreMajor: true
-    branch: monorepo_main
