--- a/java-accessapproval/google-cloud-accessapproval/pom.xml
+++ b/java-accessapproval/google-cloud-accessapproval/pom.xml
@@ -62,7 +62,7 @@
       <artifactId>threetenbp</artifactId>
     </dependency>
 
-    <!-- Test dependencies new -->
+    <!-- Test dependencies new test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
