--- a/java-analytics-admin/.OwlBot.yaml
+++ b/java-analytics-admin/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/grpc-google-.*/src"
@@ -27,3 +25,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/grpc-google-analytics-admin-$1/src"
 - source: "/google/analytics/admin/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-analytics-admin/src"
+
+api-name: analyticsadmin
