--- a/java-bigqueryconnection/.OwlBot.yaml
+++ b/java-bigqueryconnection/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/grpc-google-.*/src"
@@ -32,3 +30,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/grpc-google-cloud-bigqueryconnection-$1/src"
 - source: "/google/cloud/bigquery/connection/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-bigqueryconnection/src"
+
+api-name: bigqueryconnection
