--- a/java-compute/.OwlBot.yaml
+++ b/java-compute/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/proto-google-.*/src"
@@ -28,3 +26,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/proto-google-cloud-compute-$1/src"
 - source: "/google/cloud/compute/(v\\d)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-compute/src"
+
+api-name: compute
