--- a/java-grafeas/.OwlBot.yaml
+++ b/java-grafeas/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/src"
@@ -28,3 +26,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/src"
 - source: "/grafeas/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/src"
+
+api-name: containeranalysis
