--- a/java-gsuite-addons/.OwlBot.yaml
+++ b/java-gsuite-addons/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/samples/snippets/generated"
@@ -44,3 +42,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/v1/proto-google-apps-script-type-protos/src"
 - source: "/google/cloud/gsuiteaddons/(v.*)/.*-java/samples/snippets/generated"
   dest: "/owl-bot-staging/$1/samples/snippets/generated"
+
+api-name: gsuiteaddons
