--- a/java-secretmanager/.OwlBot.yaml
+++ b/java-secretmanager/.OwlBot.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-docker:
-  image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
 - "/samples/snippets/generated"
@@ -39,3 +37,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/google-cloud-secretmanager/src"
 - source: "/google/cloud/secretmanager/(v\\d)/.*-java/samples/snippets/generated"
   dest: "/owl-bot-staging/$1/samples/snippets/generated"
+
+api-name: secretmanager
