--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
     <module>java-workflows</module>
 
     <module>google-cloud-gapic-bom</module>
+    <module>CoverageAggregator</module>
   </modules>
 
   <build>
