--- a/java-bigquerydatatransfer/.github/sync-repo-settings.yaml
+++ b/java-bigquerydatatransfer/.github/sync-repo-settings.yaml
@@ -16,6 +16,8 @@ branchProtectionRules:
       - 'Kokoro - Test: Integration'
       - cla/google
       - OwlBot Post Processor
+      - 'Kokoro - Test: Java GraalVM Native Image'
+      - 'Kokoro - Test: Java 17 GraalVM Native Image'
   - pattern: java7
     isAdminEnforced: true
     requiredApprovingReviewCount: 1
@@ -38,4 +40,4 @@ permissionRules:
     permission: admin
   - team: yoshi-java
     permission: push
- 
+
