--- a/java-trace/.github/sync-repo-settings.yaml
+++ b/java-trace/.github/sync-repo-settings.yaml
@@ -16,6 +16,8 @@ branchProtectionRules:
       - 'Kokoro - Test: Integration'
       - cla/google
       - OwlBot Post Processor
+      - 'Kokoro - Test: Java GraalVM Native Image'
+      - 'Kokoro - Test: Java 17 GraalVM Native Image'
   - pattern: 1.3.0-sp
     isAdminEnforced: true
     requiredApprovingReviewCount: 1
