--- a/java-policy-troubleshooter/.github/sync-repo-settings.yaml
+++ b/java-policy-troubleshooter/.github/sync-repo-settings.yaml
@@ -37,6 +37,8 @@ branchProtectionRules:
   - "Kokoro - Test: Integration"
   - "cla/google"
   - "OwlBot Post Processor"
+  - "Kokoro - Test: Java GraalVM Native Image"
+  - "Kokoro - Test: Java 17 GraalVM Native Image"
 # List of explicit permissions to add (additive only)
 permissionRules:
 - team: yoshi-admins
