--- a/java-accessapproval/google-cloud-accessapproval-bom/pom.xml
+++ b/java-accessapproval/google-cloud-accessapproval-bom/pom.xml
@@ -6,9 +6,9 @@
   <version>2.4.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-accessapproval:current} -->
   <packaging>pom</packaging>
   <parent>
-    <groupId>com.google.api</groupId>
-    <artifactId>google-cloud-java</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-shared-config</artifactId>
+    <version>1.5.1</version>
   </parent>
 
   <name>Google Cloud Access Approval BOM</name>
