--- a/java-kms/google-cloud-kms-bom/pom.xml
+++ b/java-kms/google-cloud-kms-bom/pom.xml
@@ -6,9 +6,9 @@
   <version>2.6.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-kms:current} -->
   <packaging>pom</packaging>
   <parent>
-    <groupId>com.google.api</groupId>
-    <artifactId>google-cloud-java</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-shared-config</artifactId>
+    <version>1.5.1</version>
   </parent>
 
   <name>Google Cloud kms BOM</name>
