--- a/java-video-intelligence/google-cloud-video-intelligence-bom/pom.xml
+++ b/java-video-intelligence/google-cloud-video-intelligence-bom/pom.xml
@@ -6,9 +6,9 @@
   <version>2.2.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-video-intelligence:current} -->
   <packaging>pom</packaging>
   <parent>
-    <groupId>com.google.api</groupId>
-    <artifactId>google-cloud-java</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-shared-config</artifactId>
+    <version>1.5.1</version>
   </parent>
 
   <name>Google Cloud video-intelligence BOM</name>
