--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -32,6 +32,7 @@ jobs:
     - run: |
         git config user.email "suztomo@users.noreply.github.com"
         git config user.name "Tomo Suzuki"
+        git add README.md
         git commit -m 'docs: regenerate readme'
         git push -f -u origin "update-readme"
         gh pr create --title="regenerate readme"
