--- a/java-shared-dependencies/upper-bound-check/pom.xml
+++ b/java-shared-dependencies/upper-bound-check/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.google.cloud</groupId>
   <artifactId>shared-dependencies-upper-bound-test</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0</version><!-- {x-version-update:google-cloud-shared-dependencies:current} -->
+  <version>2.13.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-shared-dependencies:current} -->
   <name>Upper bound test for Google Cloud Shared Dependencies</name>
   <url>https://github.com/googleapis/java-shared-dependencies</url>
   <description>
