--- a/templates/.kokoro/release/publish_javadoc11.cfg
+++ b/templates/.kokoro/release/publish_javadoc11.cfg
@@ -1,7 +1,7 @@
 # Format: //devtools/kokoro/config/proto/build.proto
 
 # cloud-rad production
-# TODO: Change this to production bucket
+# TODO: Change this to production bucket: docs-staging-v2
 env_vars: {
   key: "STAGING_BUCKET_V2"
   value: "docs-staging-v2-dev"
