--- a/java-securitycenter-settings/pom.xml
+++ b/java-securitycenter-settings/pom.xml
@@ -12,9 +12,9 @@
   </description>
 
   <parent>
-    <groupId>com.google.cloud</groupId>
-    <artifactId>google-cloud-shared-config</artifactId>
-    <version>1.5.2</version>
+    <groupId>com.google.api</groupId>
+    <artifactId>google-cloud-java</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
 
   <developers>
