feat: create CoverageAggregator module

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
     <module>java-workflows</module>
 
     <module>google-cloud-gapic-bom</module>
+    <module>CoverageAggregator</module>
   </modules>
 
   <build>
